--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,3 +1,45 @@
 .Weather {
   border: 1px solid #b6b6b6;
+  color: rgb(135, 135, 135);
+  font-family: arial, sans-serif;
+  padding: 16px;
+
+  border-radius: 4px;
+}
+
+.Weather h1 {
+  display: block;
+  font-size: 24px;
+  font-weight: 100;
+  line-height: 29px;
+  margin: 20 0 0 0;
+}
+
+.Weather ul {
+  margin: 0;
+}
+
+.Weather li {
+  list-style: none;
+  font-size: 16px;
+  font-weight: 100;
+  line-height: 19px;
+}
+
+.Weather .temperature {
+  font-weight: bold;
+  color: rgb(33, 33, 33);
+  font-size: 64px;
+  line-height: 64px;
+  font-weight: 400;
+}
+
+.Weather .units {
+  color: rgb(33, 33, 33);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1;
+  position: relative;
+  top: -33px;
+  margin-left: 5px;
 }
