--- a/src/Weather.css
+++ b/src/Weather.css
@@ -12,11 +12,12 @@
   font-size: 24px;
   font-weight: 100;
   line-height: 29px;
-  margin: 20 0 0 0;
+  margin-top: 20px;
 }
 
 .Weather ul {
   margin: 0;
+  padding: 0;
 }
 
 .Weather li {
@@ -41,5 +42,4 @@
   line-height: 1;
   position: relative;
   top: -33px;
-  margin-left: 5px;
 }
