--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,7 +1,7 @@
 .Weather {
   border: 1px solid #b6b6b6;
   color: rgb(135, 135, 135);
-  font-family: arial, sans-serif;
+  font-family: "Labrada", serif;
   padding: 16px;
   border-radius: 4px;
 }
@@ -29,38 +29,51 @@
   color: whitesmoke;
 }
 .Weather h1 {
+  color: #240041;
+  font-family: "Labrada", serif;
   display: block;
-  font-size: 24px;
-  font-weight: 100;
+  font-size: 58px;
+  font-weight: 500;
   line-height: 29px;
-  margin-top: 20px;
+  margin-top: 30px;
+  margin-bottom: 32px;
 }
 
 .Weather ul {
-  margin: 0;
+  margin: 10px 0 0 0;
   padding: 0;
 }
 
 .Weather li {
+  color: #070a52;
+  margin-top: 20px;
   list-style: none;
-  font-size: 16px;
-  font-weight: 100;
+  font-size: 25px;
+  font-weight: 600;
   line-height: 19px;
 }
 
 .Weather .temperature {
   font-weight: bold;
-  color: rgb(33, 33, 33);
+  color: #240041;
   font-size: 64px;
   line-height: 64px;
   font-weight: 400;
 }
 
 .Weather .units {
-  color: rgb(33, 33, 33);
-  font-size: 16px;
+  color: #070a52;
+  font-size: 19px;
   font-weight: 400;
   line-height: 1;
   position: relative;
-  top: -33px;
+  top: -25px;
+  margin-left: 4px;
+}
+
+.Weather .humid-wind {
+  margin-top: 3px;
+  font-size: 26px;
+  font-weight: 500;
+  color: #240041;
 }
