--- a/src/WeatherForecast.css
+++ b/src/WeatherForecast.css
@@ -1,8 +1,16 @@
+.WeatherForecast {
+  color: #070a52;
+  text-align: center;
+  font-family: "Labrada", serif;
+  font-size: 16px;
+  font-weight: 500;
+}
 .WeatherForecast-temperature-max {
-  color: brown;
+  font-size: 20px;
+  color: #cf0000;
 }
 .WeatherForecast-temperature-min {
-  color: aqua;
-  opacity: 0.5;
-  margin-left: 5px;
+  font-size: 20px;
+  color: #62cdff;
+  margin-left: 7px;
 }
